<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_results"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dubsydesktop.gaslog.DisplayResultsActivity"
    android:orientation="vertical">

    <TextView android:id="@+id/output1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emptyOdometer" />

    <TextView android:id="@+id/output2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emptyGasCost" />

    <TextView android:id="@+id/output3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emptyQuantity" />

    <ListView
        android:id="@+id/gas_logs"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
