<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        app:srcCompat="@drawable/fuel"
        android:id="@+id/imageView"
        android:layout_margin="30px"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxHeight="160dp" />

    <LinearLayout
        android:gravity="center|bottom"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="10sp">

        <EditText android:id="@+id/odometer"
            android:layout_weight="0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/odometerValue" />

        <EditText android:id="@+id/gasCost"
            android:layout_weight="0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gasCostValue" />

        <EditText android:id="@+id/gasQuantity"
            android:layout_width="fill_parent"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:hint="@string/quantity" />

        <Button android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_margin="30px"
            android:layout_height="wrap_content"
            android:onClick="saveGasLog"
            android:hint="Save"
            android:background="@color/colorPrimary"
            android:textColorHint="#FFFFFF"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
